--- a/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
@@ -48,10 +48,10 @@
           <div class="tooltip">Sublco Online Payment</div>
         </div> -->
         <!-- =============================================== -->
-        <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('sublco_online')"><i class="fas fa-clipboard-list"></i>
+        <div class="card royal-card tooltip-container" (click)="openMsoDialog('sublco_offline')"><i class="fas fa-clipboard-list"></i>
           <div><strong> Sublco Offline <br> Payment History</strong> </div>
           <div class="tooltip">Sublco Offline Payment</div>
-        </div> -->
+        </div>
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('walletShare')"><i
             class="fas fa-clipboard-list"></i>
           <div><strong> Wallet Share Report</strong> </div>
@@ -64,7 +64,7 @@
 
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('subscriber_bill')"><i
             class="fas fa-clipboard-list"></i>
-          <div><strong>Subscriber Bill</strong> </div>
+          <div><strong>Subscriber Bill Report</strong> </div>
         </div>
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('user_rechargehistory')"><i
             class="fas fa-clipboard-list"></i>
@@ -89,14 +89,14 @@
       <div class="cardContainer">
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_active_subscription')"> <i
             class="fas fa-cloud-upload-alt"></i>
-          <div><strong>Lcowise Active <br> Subscription Count</strong> </div>
+          <div><strong>Lcowise Active <br> Subscription Count Report</strong> </div>
         </div>
         
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('customer_activation_form')"><i class="fas fa-ban"></i>
           <div><strong>Customer Activation Form</strong> </div>
         </div>
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('lcowiseExpiryCountDiff')"><i class="fas fa-rocket"></i>
-          <div><strong>Lcowise Expiry <br> Count Difference</strong> </div>
+          <div><strong>Lcowise Expiry <br> Count Difference Report</strong> </div>
         </div>
         <!-- <div class="card"><i class="fas fa-th-list"></i>
           <div><strong>Alacarte Log</strong> </div>
@@ -117,10 +117,10 @@
       <!-- <h5>CAS OPERATION HISTORY</h5> -->
       <div class="cardContainer">
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('total_lco')"><i class="fas fa-check-circle"></i>
-          <div><strong>Total Lco </strong> </div>
+          <div><strong>Total Lco Report </strong> </div>
         </div>
         <div class="card royal-card tooltip-container" (click)="openMsoDialog('lco_transfer_details')"><i class="fas fa-tv"></i>
-          <div><strong>Lco Transfer Details</strong> </div>
+          <div><strong>Lco Transfer Details Report</strong> </div>
         </div>
         <!-- <div class="card"><i class="fas fa-file-upload"></i>
           <div><strong>Invertory Upload Report</strong> </div>
