--- a/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/change-membership/change-membership.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/change-membership/change-membership.component.html
@@ -68,7 +68,7 @@
                         </select>
                     </div>
                     <div class="d-flex justify-content-center mt-3">
-                        <a class="btn btn-infos" [class.disabled]="lcomembershipid == 0" (click)="change()"
+                        <a class="btn btn-infos" [class.disabled]="lcomembershipid == 0" (click)="changeMembership()"
                             [attr.disabled]="lcomembershipid == 0 ? true : null">
                             Change
                         </a>
