--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
@@ -77,6 +77,7 @@ label {
   border-right: 0.9px solid lightgray;
 }
 
+
 .card1 {
   width: 50%;
   border: none;
@@ -737,7 +738,7 @@ label {
 
 .table-class {
   overflow: auto; /* Ensure scrolling is enabled */
-  height: 400px; /* Adjust height as needed */
+  // height: 400px; /* Adjust height as needed */
   border-bottom: 1px solid rgb(156, 154, 154);
 }
 
