--- a/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
+++ b/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
@@ -12,6 +12,7 @@
                 <option value="2">DEACTIVE </option>
                 <option value="3">SUSPEND </option>
                 <option value="4">BLOCK </option>
+                <option value="6">ALL </option>
             </select>
         </div>
     </div>
