--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
@@ -15,18 +15,12 @@
                                 <!-- <input type="text" placeholder="Search an CAS" formControlName="castypedisplay"
                                     (input)="onSearchChange($event)" [(ngModel)]="castype_1" [value]="casname"
                                     [matAutocomplete]="auto" class="example-input"> -->
-                                    <div class="input-container">
-                                        <input
-                                          type="text"
-                                          placeholder="Search a CAS"
-                                          formControlName="castype"
-                                          [value]="casname"
-                                          (input)="onSearchChange($event)"
-                                          [matAutocomplete]="auto"
-                                          class="example-input"
-                                        />
-                                        <i class="bx bx-chevron-down icon-right"></i>
-                                      </div>
+                                <div class="input-container">
+                                    <input type="text" placeholder="Search a CAS" formControlName="castype"
+                                        [value]="casname" (input)="onSearchChange($event)" [matAutocomplete]="auto"
+                                        class="example-input" />
+                                    <i class="bx bx-chevron-down icon-right"></i>
+                                </div>
                                 <mat-autocomplete #auto="matAutocomplete">
                                     <mat-option *ngFor="let casItem of filteredcas()" [value]="casItem.name"
                                         (click)="onSelectionFingerPrint(casItem)">
@@ -113,13 +107,26 @@
                                 <!-- <input placeholder="Enter Smartcard" type="text" (keypress)="onKeydown($event)"
                                     [(ngModel)]="intendid_1" [maxlength]="castype != 6 ? 20 : 14"
                                     formControlName="intendid"> -->
-                                <input placeholder="Enter Smartcard" type="text" formControlName="intendid"
+                                <!-- <input placeholder="Enter Smartcard" type="text" formControlName="intendid"
                                     [(ngModel)]="intendid_1" (keypress)="onKeydown($event)"
                                     [maxlength]="castype != 6 ? 20 : 14" (input)="validateExactLength()">
                                 <div *ngIf="isInvalidLength">
                                     <small class="text-danger">
                                         Please enter exactly {{ castype != 6 ? 20 : 14 }} digits.
                                     </small>
+                                </div> -->
+
+                                <input placeholder="Enter the smartcard..." class="input_sb" id="searchitem" #searchitem
+                                    style="font-size: 14px;" [maxlength]="castype != 6 ? 20 : 14"
+                                    (input)="validateExactLength()" formControlName="intendid"
+                                    (keyup)="onSmartcardlist( searchitem?.value)" [(ngModel)]="intendid_1">
+                                <div style="width: 60%; max-height: 150px;overflow: scroll;;"
+                                    class="dropdown-menu input"
+                                    [ngClass]="(subscriberList.length != 0 && searchitem?.value?.length != 0 && showDropdown) ? 'show' : 'hide'"
+                                    aria-labelledby="dropdownMenuButton">
+                                    <a (click)="goToSubscriberDashboard(lcomember)"
+                                        *ngFor="let lcomember of subscriberList" class="dropdown-item"> {{
+                                        lcomember.value }}</a>
                                 </div>
                                 <div *ngIf="form.get('intendid')?.invalid && form.get('indendid')?.touched">
                                     <small class="text-danger">Indend Id is required.</small>
@@ -470,7 +477,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="input-box mb-3 d-flex">
+                        <div *ngIf="isTimeSpan" class="input-box mb-3 d-flex">
                             <div class="col-sm-4">
                                 <label for="">Time Span</label>
                             </div>
@@ -495,7 +502,7 @@
                     <button (click)="submit()" [disabled]="issend" class="btn btn-success bttn">Send</button> &nbsp;
                     <button (click)="stop()" [disabled]="!issend" class="btn btn-danger bttn"> Stop </button>
                 </div>
-              
+
 
             </div>
             <div class=" d-flex justify-content-end align-items-center mb-3" [ngClass]="getStatusClass()">
