--- a/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.scss
+++ b/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.scss
@@ -125,10 +125,21 @@ span {
     display: flex;
     align-items: center;
 }
+.input_box {
+    display: flex;
+    align-items: center;
+}
 
 .input_box select,
 .input_box input {
     max-width: 150px;
+    margin-left: 8px;
+    // min-width: 20vh;
+    height: 6vh;
+}
+.input_box select,
+.input_box2 input {
+   
     margin-left: 8px;
     // min-width: 20vh;
     height: 6vh;
