--- a/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
+++ b/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
@@ -27,9 +27,10 @@
             <div class="col display justify-content-start align-items-center mb-3">
                 <span style="font-size:17px;color: red;">SELECT DISTRIBUTOR MEMBERSHIP</span> &nbsp;&nbsp;
                 <!-- {{lcomembershipname}} -->
-                <input type="text" matInput [matAutocomplete]="auto" 
+                <input type="text" matInput [matAutocomplete]="auto"
+                    [value]="selectedOperator?.name" [(ngModel)]="lcomembershipid"
                     (ngModelChange)="filterOperators($event)" placeholder="Select An Membership"
-                    [matAutocompleteDisabled]="false" [value]="lcomembershipname || selectedOperator"   [(ngModel)]="lcomembershipid">
+                    [matAutocompleteDisabled]="false">
 
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
@@ -97,13 +98,13 @@
 
                                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
                                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
-                                        (click)="onmembershipchange(operator)">
+                                        (click)="onMembershipchange(operator)">
                                         {{ operator.name }}
                                     </mat-option>
                                 </mat-autocomplete>
                             </div>
                             <ag-grid-angular #agGrid id="myGrid" style="text-align: center;"
-                                style="text-align: center; max-height: 500px;overflow: auto;" domLayout='autoHeight'
+                                style="text-align: center; max-height: 500px;overflow: auto;" domLayout='autoHeight' 
                                 class="ag-theme-alpine table-class" rowAnimation [rowSelection]="rowSelection"
                                 [columnDefs]="columnDefs2" [rowData]="rowData2"
                                 (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
@@ -170,7 +171,7 @@
     <!-- --------------------------------------------- MEBERSHIP--------------------------- -->
 
     <div *ngIf="selectedTab === 'membership'">
-        <div class="row">
+        <div class="row" >
             <div class="col-12 d-flex flex-column flex-xl-row">
                 <div class="col-12 col-xl-6 mb-4 mx-3">
                     <div>
