--- a/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.scss
+++ b/src/app/admin/features/subscriber/create-subscriber/create-subscriber.component.scss
@@ -243,3 +243,28 @@ form .gender {
         flex-direction: column;
     }
 }
+
+
+.input-container {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.example-input {
+    width: 100%;
+    padding-right: 2rem;
+    box-sizing: border-box;
+}
+
+.icon-right {
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: #050505;
+    font-size: 19px;
+    font-weight: 600;
+
+}
