--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -6,7 +6,7 @@
             </h5>
         </div>
         <div class="display align-item-center">
-            <div class="col-12 col-md-4 mx-2 mb-3">
+            <div class="col-12 col-md-4  ">
                 <div class="card ">
                     <div class="d-flex">
                         <div class="col-3 col-md-2 " style="padding: 0.5rem;">
@@ -164,7 +164,7 @@
     </section>
     <section *ngIf="subscriersmartcarddashoard">
         <div class="display align-item-center">
-            <div class="col-12 col-md-4 mx-2 mb-3">
+            <div class="col-12 col-md-4  mb-3">
                 <div class="card ">
                     <div class="d-flex justify-content-start align-item-center">
                         <div class="d-flex" style="padding: 10px;">
@@ -291,7 +291,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-8 col-md-8 mx-2">
+            <div class="col-12 col-md-8 col-md-8 mx-2 mb-3">
                 <div class="card">
                     <div class="d-flex justify-content-between align-item-center mb-1">
                         <div class="d-flex" style="padding: 10px;">
