--- a/src/styles.scss
+++ b/src/styles.scss
@@ -296,6 +296,22 @@ div:where(.swal2-container) h2:where(.swal2-title) {
     font-family: 'Poppins', sans-serif;
     transition: all 120ms ease-out 0s;
 }
+.input_box2 input {
+    width: 100%;
+    height: 45px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding: 0px 12px;
+    border-top: 2px solid #b0afaf;
+    border-bottom: 0.9px solid lightgray;
+    border-left: 0.9px solid lightgray;
+    border-right: 0.9px solid lightgray;
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+    background-color: #f6f8fa;
+    font-family: 'Poppins', sans-serif;
+    transition: all 120ms ease-out 0s;
+}
 
 .input_box select {
     width: 100%;
